--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 15px;
+    gap: 2rem;
     padding: 0;
     margin: 0;
 }
@@ -36,8 +36,9 @@ body {
 
 .nav-links a {
     text-decoration: none;
-    color: #333;
+    color: #943939;
     font-size: 2rem;
+    font-family: "montserrat", sans-serif;
 }
 .container{
     max-width: 1200px;
