--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,8 @@ p {
     font-weight: bold;
     font-family: var(--font-logo);
     color: var(--color-primary);
+    margin: 0;
+    line-height: 1;
 }
 
 .logo a {
@@ -383,6 +385,7 @@ button:hover {
     padding: 0.5rem;
     z-index: 100;
     box-shadow: none;
+    margin: 0;
 }
 
 .hamburger:hover {
@@ -402,8 +405,14 @@ button:hover {
 
 /* Mobile Styles */
 @media screen and (max-width: 768px) {
+    .logo {
+        font-size: 2.5rem;
+        margin: 0;
+    }
+    
     .hamburger {
         display: block;
+        margin: 0;
     }
 
     .hamburger.active .bar:nth-child(2) {
